* Fixed use of deprecated block_categories filter with WordPress 5.8+ using the block_categories_all filter instead.
* Removed a dropped integration entry from add-ons.
* Affiliate registration form now shows account is closed for deleted affiliates.
* Referrals admin section now also includes deleted accounts when inoperative option is used.

= 4.9.0 =
* WordPress 5.7 compatible.
* Fixed PHP 8.x deprecated required parameters after optional parameters.
* Updated pagination navigation elements on several screens to show as buttons for easier use.
* Updated the affiliate selection field to include Ids when creating or editing referrals.

= 4.8.0 =
* Requires at least WordPress 5.0.
* WordPress 5.6 compatible.
* Fixed profile fields were not showing translations with WPML except on registration form.
* Added notification messages to WPML translatable strings.
* Updated custom jQuery UI (used for datepickers), fixes no datepickers due to console error.

= 4.7.0 =
* WordPress 5.5 compatible.
* Removed use of the jQuery corner plugin (cosmetics do not belong in scripts and also fixes $.browser undefined issue).

= 4.6.0 =
* WordPress 5.4 compatible.
* Fixed a notice related to the deprecated contextual_help action.
* Added the affiliates_admin_help_show_screen filter.
* Added support for registration field label translation with WPML, requires WPML >= 3.2 and WPML String Translation.
* Added the AFFILIATES_WPML constant that can be used to enable/disable support for translation with WPML (enabled by default).

= 4.5.0 =
* WordPress 5.3 compatibility retested.
* Updated referral process of user registration integration.

= 4.4.0 =
* WordPress 5.3 compatible.

= 4.3.0 =
* Added the formal German (Sie) translation.
* Updated the informal German (Du) translation.
* Added formal and informal translations for German (Austria).
* Added formal and informal translations for German (Switzerland).

= 4.2.0 =
* Improved the affiliate request evaluation procedure.