@@ -9,6 +9,7 @@
 * Removed a dropped integration entry from add-ons.
 * Affiliate registration form now shows account is closed for deleted affiliates.
 * Referrals admin section now also includes deleted accounts when inoperative option is used.
+* Added support for coupon overrides with Affiliates Permanent 1.7.0.
 
 = 4.9.0 =
 * WordPress 5.7 compatible.
